  - Query and display powa-collector information (Julien Rouhaud)
  - Expose system cache hit / disk read metrics on global and per-database
    pages (Julien Rouhaud)
  - Expose new metrics added in pg_stat_kcache 2.1 (page faults, context
    switches...) on global and per-database pages (Julien Rouhaud)
  - Add wait events graphs on global and per-database pages (Julien Rouhaud)

3.2.1(WIP):
  - Add pg_wait_sampling in the config extension list (Julien Rouhaud, thanks
    to Adrien Nayrat for the report)
  - Don't try to detect if a hypotetical index would be used if no suitable
    index is detected (Julien Rouhaud, thanks to Guillaume Lelarge for the
    report)
  - Fix lost filter when changing the time range (Pierre Giraud, thanks to Marc
    Cousin for the report)
  - Fix database wizard query validation for pg11+ (Julien Rouhaud)
  - Handle hypopg unsupported access methods in dataabase wizard (Julien
    Rouhaud, thanks to Adrien Di Mascio for the report)
  - Fix compatibility with SQLAlchemy 1.3+ (Julien Rouhaud, thanks to github
    user mchubby and irc user ChOcO-Bn for the report)
  - Fix query detail if no data is found on the selected range (Julien Rouhaud,
    thanks to irc user ChOcO-Bn for the report)
  - Fix some metrics in wait events and general query datasources (Julien
    Rouhaud, thanks to Adrien Nayrat for the report)
3.2.0:
  - Add support for pg_wait_sampling to display wait events statistics and
    graphs, require pg9.6+ (Julien Rouhaud)
  - Show a sorted list of servers on login screen (meikomeik)
  - Add category to the list of column in the config overview page (Julien
    Rouhaud, thanks to Nehemiah I. Dacres for the feature request)
  - New breadcrumb and many other UI improvements (Pierre Giraud)
  - Fix behavior when changing time interval and then changing back to last
    hour (Julien Rouhaud, reported by Thomas Reiss)
  - Allow both "user" and "username" in configuration files (Julien Rouhaud)
3.1.4: