@@ -6,6 +6,8 @@
   - Expose new metrics added in pg_stat_kcache 2.1 (page faults, context
     switches...) on global and per-database pages (Julien Rouhaud)
   - Add wait events graphs on global and per-database pages (Julien Rouhaud)
+  - Add queries per second counter on global and per-database pages (Julien
+    Rouhaud)
 
 3.2.1(WIP):
   - Add pg_wait_sampling in the config extension list (Julien Rouhaud, thanks
